--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.application.name=prompt-tester
 
 openai.api.key=${OPENAI_API_KEY}
 
-
+server.port=${PORT:8080}
 spring.thymeleaf.cache=false
+
+logging.level.root=INFO
